--- a/PROJECT/single-categories.html
+++ b/PROJECT/single-categories.html
@@ -90,7 +90,7 @@
              <div class="menu-item-price">$10.95<span> (pint)</span>$14.95 <span>(quart)</span></div>
             </div>  
             <div class="menu-item-description col-sm-7">
-              <h3 class="menu-item-tile"> veal with Mixed Vegetables</h3>
+              <h3 class="menu-item-tile"> meal with Mixed Vegetables</h3>
               <p class="menu-item-details">
                 Noodle Traditional noodle-making involving hand-pulling in Dalian, Liaoning, China Place of origin China Region or state East Asia Main ingredients Unleavened dough Cookbook. 
               </p>
@@ -110,7 +110,7 @@
              <div class="menu-item-price">$10.95<span> (pint)</span>$14.95 <span>(quart)</span></div>
             </div>  
             <div class="menu-item-description col-sm-7">
-              <h3 class="menu-item-tile"> veal with Mixed Vegetables</h3>
+              <h3 class="menu-item-tile"> meal with Mixed Vegetables</h3>
               <p class="menu-item-details">
                 Noodle Traditional noodle-making involving hand-pulling in Dalian, Liaoning, China Place of origin China Region or state East Asia Main ingredients Unleavened dough Cookbook. 
               </p>
@@ -131,7 +131,7 @@
              <div class="menu-item-price">$10.95<span> (pint)</span>$14.95 <span>(quart)</span></div>
             </div>  
             <div class="menu-item-description col-sm-7">
-              <h3 class="menu-item-tile"> veal with Mixed Vegetables</h3>
+              <h3 class="menu-item-tile"> meal with Mixed Vegetables</h3>
               <p class="menu-item-details">
                 Noodle Traditional noodle-making involving hand-pulling in Dalian, Liaoning, China Place of origin China Region or state East Asia Main ingredients Unleavened dough Cookbook. 
               </p>
@@ -151,7 +151,7 @@
              <div class="menu-item-price">$10.95<span> (pint)</span>$14.95 <span>(quart)</span></div>
             </div>  
             <div class="menu-item-description col-sm-7">
-              <h3 class="menu-item-tile"> veal with Mixed Vegetables</h3>
+              <h3 class="menu-item-tile"> meal with Mixed Vegetables</h3>
               <p class="menu-item-details">
                 Noodle Traditional noodle-making involving hand-pulling in Dalian, Liaoning, China Place of origin China Region or state East Asia Main ingredients Unleavened dough Cookbook. 
               </p>
@@ -173,7 +173,7 @@
              <div class="menu-item-price">$10.95<span> (pint)</span>$14.95 <span>(quart)</span></div>
             </div>  
             <div class="menu-item-description col-sm-7">
-              <h3 class="menu-item-tile"> veal with Mixed Vegetables</h3>
+              <h3 class="menu-item-tile"> meal with Mixed Vegetables</h3>
               <p class="menu-item-details">
                 Noodle Traditional noodle-making involving hand-pulling in Dalian, Liaoning, China Place of origin China Region or state East Asia Main ingredients Unleavened dough Cookbook. 
               </p>
@@ -193,7 +193,7 @@
              <div class="menu-item-price">$10.95<span> (pint)</span>$14.95 <span>(quart)</span></div>
             </div>  
             <div class="menu-item-description col-sm-7">
-              <h3 class="menu-item-tile"> veal with Mixed Vegetables</h3>
+              <h3 class="menu-item-tile"> meal with Mixed Vegetables</h3>
               <p class="menu-item-details">
                 Noodle Traditional noodle-making involving hand-pulling in Dalian, Liaoning, China Place of origin China Region or state East Asia Main ingredients Unleavened dough Cookbook. 
               </p>
